# Slice_Agent

./: .gitignore  README.md  dump.rdb
backend/: .env.example  .gitignore  README.md  dump.rdb  pyproject.toml  start_backend.cmd
backend/app/: db.py  main.py
backend/app/api/routes/: clips.py  tasks.py
backend/app/core/: config.py
backend/app/integrations/: asr_client.py  ffmpeg_client.py  llm_client.py
backend/app/models/: enums.py
backend/app/repositories/: base.py  clip_repository.py  task_log_repository.py  task_repository.py  transcript_repository.py
backend/app/schemas/: clip_schema.py  llm_schema.py  task_schema.py  transcript_schema.py
backend/app/services/: audio_service.py  clip_service.py  queue_service.py  storage_service.py  task_service.py  transcript_service.py  video_service.py
backend/app/utils/: id_utils.py  retry_utils.py  time_utils.py  validation_utils.py
backend/app/workers/: celery_app.py  clip_tasks.py  video_pipeline.py
backend/logs/20260618-144540/: pids.json
backend/logs/20260618-145141/: pids.json
backend/logs/20260618-145247/: pids.json
backend/logs/20260618-145522/: pids.json
backend/logs/20260618-215433/: pids.json
backend/logs/20260618-220406/: pids.json
backend/scripts/: e2e_api_test.py  start_backend.ps1  start_backend.py
backend/tests/: test_llm_schema.py  test_utils.py
docs/: data-flow.md
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+3 more)
tmp/pdfs/: product.txt  technical.txt
(+17 files in other folders)
